Listagem de pediso e swagger
Atualizando a listagem de pedidos adicionando filtros e atualizando a documentação no Swagger
